# CSPB-3308-Team-6

./: .gitignore  Messaging App User Stories  README.md  Team6_Lab3_TeamPointing.md  joeymu_test.txt  package-lock.json  smrhoades-test.txt
PAGE_TESTING/: PAGE_TESTING.md
backend/: .env.example  README.md  chat_requirements.md  pyproject.toml  requirements.txt  run.py
backend/backend-research/Supabase/: st.py
backend/backend-research/flask-tutorial/: README.md  pyproject.toml  run.py
backend/backend-research/flask-tutorial/flaskr/: __init__.py  auth.py  blog.py  chat.py
backend/backend-research/flask-tutorial/flaskr/templates/: base.html
backend/backend-research/flask-tutorial/flaskr/templates/blog/: create.html  update.html
backend/backend-research/flask-tutorial/flaskr/templates/chat/: chat.html
backend/backend-research/flask-tutorial/tests/: conftest.py  data.sql  test_auth.py  test_blog.py
backend/feature_specs/: addcontact_spec.md  addcontact_test_cases.md  chat_spec.md
backend/instance/: create_messenger_db.py  messenger_app.sqlite
backend/message_app/: __init__.py  auth.py  chat.py  contacts.py  data_classes.py  db.py  decorators.py  home.py  insert_dummy_data.py  schema.sql  usersearch.py
backend/message_app/templates/: base.html
backend/message_app/templates/auth/: login.html
backend/message_app/templates/chat/: chat.html
backend/message_app/templates/home/: home.html
backend/tests/: conftest.py  test_achat.py  test_auth.py  test_chat.py  test_contacts.py  test_data.py  test_db.py  test_factory.py  test_home.py  test_usersearch.py
(+43 files in other folders)
