[project]
name = "backend"
version = "1.0.0"
description = "The backend of the chat app built in Flask."
dependencies = [
	"flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["message_app"]
